--- a/portfolio.html
+++ b/portfolio.html
@@ -67,8 +67,8 @@
 
           <ul class="project-list">
 
-            <article class="project-card">
-              <li>
+            <li>
+              <article class="project-card">
                 <a href="">
                   <img src="./images/portfolio/techno.jpg" alt="techno">
                   <div class="card-info">
@@ -76,23 +76,22 @@
                     <p class="card-marker">Веб-сайт</p>
                   </div>
                 </a>
-              </li>
-            </article>
+              </article>
+            </li>
 
-            <article class="project-card">
-              <li>
-                <a href="">
+            <li>
+              <article class="project-card"><a href="">
                   <img src="./images/portfolio/orlean.jpg" alt="New Orlean vs Golden Star">
                   <div class="card-info">
                     <h3 class="card-title">Постер New Orlean vs Golden Star</h3>
                     <p class="card-marker">Дизайн</p>
                   </div>
                 </a>
-              </li>
-            </article>
+              </article>
+            </li>
 
-            <article class="project-card">
-              <li>
+            <li>
+              <article class="project-card">
                 <a href="">
                   <img src="./images/portfolio/seafood.jpg" alt="Seafood">
                   <div class="card-info">
@@ -100,11 +99,11 @@
                     <p class="card-marker">Додаток</p>
                   </div>
                 </a>
-              </li>
-            </article>
+              </article>
+            </li>
 
-            <article class="project-card">
-              <li>
+            <li>
+              <article class="project-card">
                 <a href="">
                   <img src="./images/portfolio/prime.jpg" alt="Prime">
                   <div class="card-info">
@@ -112,23 +111,22 @@
                     <p class="card-marker">Маркетинг</p>
                   </div>
                 </a>
-              </li>
-            </article>
+              </article>
+            </li>
 
-            <article class="project-card">
-              <li>
-                <a href="">
+            <li>
+              <article class="project-card"><a href="">
                   <img src="./images/portfolio/boxes.jpg" alt="Boxes">
                   <div class="card-info">
                     <h3 class="card-title">Проєкт Boxes</h3>
                     <p class="card-marker">Додаток</p>
                   </div>
                 </a>
-              </li>
-            </article>
+              </article>
+            </li>
 
-            <article class="project-card">
-              <li>
+            <li>
+              <article class="project-card">
                 <a href="">
                   <img src="./images/portfolio/inspiration.jpg" alt="Inspiration has no Borders">
                   <div class="card-info">
@@ -136,11 +134,11 @@
                     <p class="card-marker">Веб-сайт</p>
                   </div>
                 </a>
-              </li>
-            </article>
+              </article>
+            </li>
 
-            <article class="project-card">
-              <li>
+            <li>
+              <article class="project-card">
                 <a href="">
                   <img src="./images/portfolio/edition.jpg" alt="Limited Edition">
                   <div class="card-info">
@@ -148,11 +146,12 @@
                     <p class="card-marker">Дизайн</p>
                   </div>
                 </a>
-              </li>
-            </article>
+              </article>
+            </li>
 
-            <article class="project-card">
-              <li>
+
+            <li>
+              <article class="project-card">
                 <a href="">
                   <img src="./images/portfolio/lab.jpg" alt="LAB">
                   <div class="card-info">
@@ -160,11 +159,11 @@
                     <p class="card-marker">Маркетинг</p>
                   </div>
                 </a>
-              </li>
-            </article>
+              </article>
+            </li>
 
-            <article class="project-card">
-              <li>
+            <li>
+              <article class="project-card">
                 <a href="">
                   <img src="./images/portfolio/business.jpg" alt="Growing Business">
                   <div class="card-info">
@@ -172,16 +171,14 @@
                     <p class="card-marker">Додаток</p>
                   </div>
                 </a>
-              </li>
-            </article>
+              </article>
+            </li>
 
           </ul>
 
         </div>
 
       </div>
-
-
 
     </section>
   </main>
