--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
 
 <body>
 
-
-
   <!-- header -->
   <header class="head">
 
@@ -34,10 +32,20 @@
 
       <ul class="head-contact">
         <li>
-          <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="contact-link" href="mailto:info@devstudio.com">
+            <svg class="contact-icon" width="16" height="12">
+              <use href="./svg/sprite.svg#envelope"></use>
+            </svg>
+            info@devstudio.com
+          </a>
         </li>
         <li>
-          <a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="contact-link" href="tel:+380961111111">
+            <svg class="contact-icon" width="10" height="16">
+              <use href="./svg/sprite.svg#smartphone"></use>
+            </svg>
+            +38 096 111 11 11
+          </a>
         </li>
       </ul>
 
@@ -68,21 +76,33 @@
         <h2 class="visually-hidden">Качества компаніі</h2>
 
         <ul class="quality-list">
-          <li>
+          <li class="quality-item">
+            <svg class="quality-icon" width="70" height="70">
+              <use href="./svg/sprite.svg#antenna"></use>
+            </svg>
             <h3 class="quality-title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="quality-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
-          <li>
+          <li class="quality-item">
+            <svg class="quality-icon" width="70" height="70">
+              <use href="./svg/sprite.svg#clock"></use>
+            </svg>
             <h3 class="quality-title">ПУНКТУАЛЬНІСТЬ</h3>
             <p class="quality-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
             </p>
           </li>
-          <li>
+          <li class="quality-item">
+            <svg class="quality-icon" width="70" height="70">
+              <use href="./svg/sprite.svg#diagram"></use>
+            </svg>
             <h3 class="quality-title">ПЛАНУВАННЯ</h3>
             <p class="quality-text">Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
-          <li>
+          <li class="quality-item">
+            <svg class="quality-icon" width="70" height="70">
+              <use href="./svg/sprite.svg#astronaut"></use>
+            </svg>
             <h3 class="quality-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p class="quality-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.
             </p>
@@ -119,58 +139,300 @@
         <ul class="team-list">
           <li class="team-item">
             <img class="team-img" src="./images/studio/img.jpg" alt="Frontend Developer" width="270" height="260">
-            <h3 class="team-title">Ігор Дем'яненко</h3>
-            <p class="team-profession">Product Designer</p>
+            <div class="team-content">
+              <h3 class="team-title">Ігор Дем'яненко</h3>
+              <p class="team-profession">Product Designer</p>
+              <ul class="team-networks networks">
+                <li class="networks-item">
+                  <a class="networks-link" href="https://www.instagram.com/" target="_blank"
+                    rel="noopener noreferrer nofollow">
+                    <svg class="networks-icon" width="20" height="20">
+                      <use href="./svg/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="networks-item">
+                  <a class="networks-link" href="https://twitter.com/" target="_blank"
+                    rel="noopener noreferrer nofollow">
+                    <svg class="networks-icon" width="20" height="20">
+                      <use href="./svg/sprite.svg#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="networks-item">
+                  <a class="networks-link" href="https://www.facebook.com/" target="_blank"
+                    rel="noopener noreferrer nofollow">
+                    <svg class="networks-icon" width="20" height="20">
+                      <use href="./svg/sprite.svg#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="networks-item">
+                  <a class="networks-link" href="https://www.linkedin.com/" target="_blank"
+                    rel="noopener noreferrer nofollow">
+                    <svg class="networks-icon" width="20" height="20">
+                      <use href="./svg/sprite.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="team-item">
             <img class="team-img" src="./images/studio/img2.jpg" alt="Frontend Developer" width="270" height="260">
-            <h3 class="team-title">Ольга Рєпіна</h3>
-            <p class="team-profession">Frontend Developer</p>
+            <div class="team-content">
+              <h3 class="team-title">Ольга Рєпіна</h3>
+              <p class="team-profession">Frontend Developer</p>
+              <ul class="team-networks networks">
+                <li class="networks-item">
+                  <a class="networks-link" href="https://www.instagram.com/" target="_blank"
+                    rel="noopener noreferrer nofollow">
+                    <svg class="networks-icon" width="20" height="20">
+                      <use href="./svg/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="networks-item">
+                  <a class="networks-link" href="https://twitter.com/" target="_blank"
+                    rel="noopener noreferrer nofollow">
+                    <svg class="networks-icon" width="20" height="20">
+                      <use href="./svg/sprite.svg#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="networks-item">
+                  <a class="networks-link" href="https://www.facebook.com/" target="_blank"
+                    rel="noopener noreferrer nofollow">
+                    <svg class="networks-icon" width="20" height="20">
+                      <use href="./svg/sprite.svg#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="networks-item">
+                  <a class="networks-link" href="https://www.linkedin.com/" target="_blank"
+                    rel="noopener noreferrer nofollow">
+                    <svg class="networks-icon" width="20" height="20">
+                      <use href="./svg/sprite.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="team-item">
             <img class="team-img" src="./images/studio/img3.jpg" alt="Marketing" width="270" height="260">
-            <h3 class="team-title">Микола Тарасов</h3>
-            <p class="team-profession">Marketing</p>
+            <div class="team-content">
+              <h3 class="team-title">Микола Тарасов</h3>
+              <p class="team-profession">Marketing</p>
+              <ul class="team-networks networks">
+                <li class="networks-item">
+                  <a class="networks-link" href="https://www.instagram.com/" target="_blank"
+                    rel="noopener noreferrer nofollow">
+                    <svg class="networks-icon" width="20" height="20">
+                      <use href="./svg/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="networks-item">
+                  <a class="networks-link" href="https://twitter.com/" target="_blank"
+                    rel="noopener noreferrer nofollow">
+                    <svg class="networks-icon" width="20" height="20">
+                      <use href="./svg/sprite.svg#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="networks-item">
+                  <a class="networks-link" href="https://www.facebook.com/" target="_blank"
+                    rel="noopener noreferrer nofollow">
+                    <svg class="networks-icon" width="20" height="20">
+                      <use href="./svg/sprite.svg#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="networks-item">
+                  <a class="networks-link" href="https://www.linkedin.com/" target="_blank"
+                    rel="noopener noreferrer nofollow">
+                    <svg class="networks-icon" width="20" height="20">
+                      <use href="./svg/sprite.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="team-item">
             <img class="team-img" src="./images/studio/img4.jpg" alt="UI Designe" width="270" height="260">
-            <h3 class="team-title">Михайло Єрмаков</h3>
-            <p class="team-profession">UI Designer</p>
+            <div class="team-content">
+              <h3 class="team-title">Михайло Єрмаков</h3>
+              <p class="team-profession">UI Designer</p>
+              <ul class="team-networks networks">
+                <li class="networks-item">
+                  <a class="networks-link" href="https://www.instagram.com/" target="_blank"
+                    rel="noopener noreferrer nofollow">
+                    <svg class="networks-icon" width="20" height="20">
+                      <use href="./svg/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="networks-item">
+                  <a class="networks-link" href="https://twitter.com/" target="_blank"
+                    rel="noopener noreferrer nofollow">
+                    <svg class="networks-icon" width="20" height="20">
+                      <use href="./svg/sprite.svg#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="networks-item">
+                  <a class="networks-link" href="https://www.facebook.com/" target="_blank"
+                    rel="noopener noreferrer nofollow">
+                    <svg class="networks-icon" width="20" height="20">
+                      <use href="./svg/sprite.svg#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="networks-item">
+                  <a class="networks-link" href="https://www.linkedin.com/" target="_blank"
+                    rel="noopener noreferrer nofollow">
+                    <svg class="networks-icon" width="20" height="20">
+                      <use href="./svg/sprite.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </li>
         </ul>
 
       </div>
     </section>
+
+    <!-- clients -->
+    <section class="clients section">
+
+      <div class="container">
+
+        <h2 class="clients-title section-title">Постійні клієнти</h2>
+
+        <ul class="clients-list">
+
+          <li class="clients-item">
+            <a class="clients-link" href="" target="_blank" rel="noopener noreferrer nofollow">
+              <svg class="clients-icon" width="106" height="60">
+                <use href="./svg/sprite.svg#client1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="clients-item">
+            <a class="clients-link" href="" target="_blank" rel="noopener noreferrer nofollow">
+              <svg class="clients-icon" width="106" height="60">
+                <use href="./svg/sprite.svg#client2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="clients-item">
+            <a class="clients-link" href="" target="_blank" rel="noopener noreferrer nofollow">
+              <svg class="clients-icon" width="106" height="60">
+                <use href="./svg/sprite.svg#client3"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="clients-item">
+            <a class="clients-link" href="" target="_blank" rel="noopener noreferrer nofollow">
+              <svg class="clients-icon" width="106" height="60">
+                <use href="./svg/sprite.svg#client4"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="clients-item">
+            <a class="clients-link" href="" target="_blank" rel="noopener noreferrer nofollow">
+              <svg class="clients-icon" width="106" height="60">
+                <use href="./svg/sprite.svg#client5"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="clients-item">
+            <a class="clients-link" href="" target="_blank" rel="noopener noreferrer nofollow">
+              <svg class="clients-icon" width="106" height="60">
+                <use href="./svg/sprite.svg#client6"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+
+      </div>
+    </section>
+
   </main>
 
   <!--footter-->
   <footer class="footer">
-    <div class="container">
+    <div class="footer-container container">
 
-      <a class="logo footer-logo" href="./index.html"><span class="logo-blue">Web</span>Studio</a>
+      <div class="footer-nav">
+        <a class="logo footer-logo" href="./index.html"><span class="logo-blue">Web</span>Studio</a>
 
-      <!-- fotter address -->
-      <address class="address" id="contact">
+        <!-- fotter address -->
+        <address class="footer-address" id="contact">
 
-        <ul class="address-list">
-          <li class="address-item">
-            <a class="address-map address-hover"
-              href="https://www.google.com/maps/place/GREEN+HOUSE/@48.90028,23.3077456,17z/data=!4m9!3m8!1s0x473989dc6a29fd1f:0xf99ad398de3efd34!5m2!4m1!1i2!8m2!3d48.8999723!4d23.3089486!16s%2Fg%2F11qqn3vghm?entry=ttu"
-              target="_blank" rel="noopener noreferrer nofollow">
-              м. Київ, пр-т Лесі Українки, 26
+          <ul class="address-list">
+            <li class="address-item">
+              <a class="address-map address-hover"
+                href="https://www.google.com/maps/place/GREEN+HOUSE/@48.90028,23.3077456,17z/data=!4m9!3m8!1s0x473989dc6a29fd1f:0xf99ad398de3efd34!5m2!4m1!1i2!8m2!3d48.8999723!4d23.3089486!16s%2Fg%2F11qqn3vghm?entry=ttu"
+                target="_blank" rel="noopener noreferrer nofollow">
+                м. Київ, пр-т Лесі Українки, 26
+              </a>
+            </li>
+            <li class="address-item">
+              <a class="address-contact address-hover" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="address-item">
+              <a class="address-contact address-hover" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+
+        </address>
+      </div>
+
+      <!-- fotter networks -->
+      <div class="fotter-social">
+        <h3 class="social-title">приєднуйтесь</h3>
+        <ul class="networks">
+          <li class="networks-item">
+            <a class="networks-link" href="https://www.instagram.com/" target="_blank"
+              rel="noopener noreferrer nofollow">
+              <svg class="networks-icon" width="20" height="20">
+                <use href="./svg/sprite.svg#instagram"></use>
+              </svg>
             </a>
           </li>
-          <li class="address-item">
-            <a class="address-contact address-hover" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <li class="networks-item">
+            <a class="networks-link" href="https://twitter.com/" target="_blank" rel="noopener noreferrer nofollow">
+              <svg class="networks-icon" width="20" height="20">
+                <use href="./svg/sprite.svg#twitter"></use>
+              </svg>
+            </a>
           </li>
-          <li class="address-item">
-            <a class="address-contact address-hover" href="tel:+380961111111">+38 096 111 11 11</a>
+          <li class="networks-item">
+            <a class="networks-link" href="https://www.facebook.com/" target="_blank"
+              rel="noopener noreferrer nofollow">
+              <svg class="networks-icon" width="20" height="20">
+                <use href="./svg/sprite.svg#facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="networks-item">
+            <a class="networks-link" href="https://www.linkedin.com/" target="_blank"
+              rel="noopener noreferrer nofollow">
+              <svg class="networks-icon" width="20" height="20">
+                <use href="./svg/sprite.svg#linkedin"></use>
+              </svg>
+            </a>
           </li>
         </ul>
+      </div>
 
-      </address>
     </div>
-  </footer>
+  </footer>sprite
 
 </body>
 
