--- a/portfolio.html
+++ b/portfolio.html
@@ -16,11 +16,12 @@
 <body>
   <!-- header -->
   <header class="head">
+
     <div class="head-container container">
 
       <a class="logo" href="./index.html"><span class="logo-blue">Web</span>Studio</a>
 
-      <nav class="head-nav">
+      <nav class="head-nav ">
         <ul class="nav-sait">
           <li><a class="sait-link" href="./index.html">Студія</a></li>
           <li><a class="sait-link current" href="./portfolio.html">Портфоліо</a></li>
@@ -30,14 +31,25 @@
 
       <ul class="head-contact">
         <li>
-          <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="contact-link" href="mailto:info@devstudio.com">
+            <svg class="contact-icon" width="16" height="12">
+              <use href="./svg/sprite.svg#envelope"></use>
+            </svg>
+            info@devstudio.com
+          </a>
         </li>
         <li>
-          <a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="contact-link" href="tel:+380961111111">
+            <svg class="contact-icon" width="10" height="16">
+              <use href="./svg/sprite.svg#smartphone"></use>
+            </svg>
+            +38 096 111 11 11
+          </a>
         </li>
       </ul>
 
     </div>
+
   </header>
 
   <!-- main -->
@@ -45,6 +57,8 @@
 
     <!-- portfolio project -->
     <section class="portfolio section">
+
+      <h1 class="visually-hidden">portfolio</h1>
 
       <div class="container">
         <!-- portfolio filter -->
@@ -69,7 +83,7 @@
 
             <li>
               <article class="project-card">
-                <a href="">
+                <a href="" target="_blank" rel="noopener noreferrer nofollow">
                   <img src="./images/portfolio/techno.jpg" alt="techno">
                   <div class="card-info">
                     <h3 class="card-title">Технокряк</h3>
@@ -80,7 +94,8 @@
             </li>
 
             <li>
-              <article class="project-card"><a href="">
+              <article class="project-card">
+                <a href="" target="_blank" rel="noopener noreferrer nofollow">
                   <img src="./images/portfolio/orlean.jpg" alt="New Orlean vs Golden Star">
                   <div class="card-info">
                     <h3 class="card-title">Постер New Orlean vs Golden Star</h3>
@@ -92,7 +107,7 @@
 
             <li>
               <article class="project-card">
-                <a href="">
+                <a href="" target="_blank" rel="noopener noreferrer nofollow">
                   <img src="./images/portfolio/seafood.jpg" alt="Seafood">
                   <div class="card-info">
                     <h3 class="card-title">Ресторан Seafood</h3>
@@ -104,7 +119,7 @@
 
             <li>
               <article class="project-card">
-                <a href="">
+                <a href="" target="_blank" rel="noopener noreferrer nofollow">
                   <img src="./images/portfolio/prime.jpg" alt="Prime">
                   <div class="card-info">
                     <h3 class="card-title">Проєкт Prime</h3>
@@ -115,7 +130,8 @@
             </li>
 
             <li>
-              <article class="project-card"><a href="">
+              <article class="project-card">
+                <a href="" target="_blank" rel="noopener noreferrer nofollow">
                   <img src="./images/portfolio/boxes.jpg" alt="Boxes">
                   <div class="card-info">
                     <h3 class="card-title">Проєкт Boxes</h3>
@@ -127,7 +143,7 @@
 
             <li>
               <article class="project-card">
-                <a href="">
+                <a href="" target="_blank" rel="noopener noreferrer nofollow">
                   <img src="./images/portfolio/inspiration.jpg" alt="Inspiration has no Borders">
                   <div class="card-info">
                     <h3 class="card-title">Inspiration has no Borders</h3>
@@ -139,7 +155,7 @@
 
             <li>
               <article class="project-card">
-                <a href="">
+                <a href="" target="_blank" rel="noopener noreferrer nofollow">
                   <img src="./images/portfolio/edition.jpg" alt="Limited Edition">
                   <div class="card-info">
                     <h3 class="card-title">Видання Limited Edition</h3>
@@ -152,7 +168,7 @@
 
             <li>
               <article class="project-card">
-                <a href="">
+                <a href="" target="_blank" rel="noopener noreferrer nofollow">
                   <img src="./images/portfolio/lab.jpg" alt="LAB">
                   <div class="card-info">
                     <h3 class="card-title">Проєкт LAB</h3>
@@ -164,7 +180,7 @@
 
             <li>
               <article class="project-card">
-                <a href="">
+                <a href="" target="_blank" rel="noopener noreferrer nofollow">
                   <img src="./images/portfolio/business.jpg" alt="Growing Business">
                   <div class="card-info">
                     <h3 class="card-title">Growing Business</h3>
@@ -185,30 +201,71 @@
 
   <!--footter-->
   <footer class="footer">
-    <div class="container">
+    <div class="footer-container container">
 
-      <a class="logo footer-logo" href="./index.html"><span class="logo-blue">Web</span>Studio</a>
+      <div class="footer-nav">
+        <a class="logo footer-logo" href="./index.html"><span class="logo-blue">Web</span>Studio</a>
 
-      <!-- fotter address -->
-      <address class="address" id="contact">
+        <!-- fotter address -->
+        <address class="footer-address" id="contact">
 
-        <ul class="address-list">
-          <li class="address-item">
-            <a class="address-map address-hover"
-              href="https://www.google.com/maps/place/GREEN+HOUSE/@48.90028,23.3077456,17z/data=!4m9!3m8!1s0x473989dc6a29fd1f:0xf99ad398de3efd34!5m2!4m1!1i2!8m2!3d48.8999723!4d23.3089486!16s%2Fg%2F11qqn3vghm?entry=ttu"
-              target="_blank" rel="noopener noreferrer nofollow">
-              м. Київ, пр-т Лесі Українки, 26
+          <ul class="address-list">
+            <li class="address-item">
+              <a class="address-map address-hover"
+                href="https://www.google.com/maps/place/GREEN+HOUSE/@48.90028,23.3077456,17z/data=!4m9!3m8!1s0x473989dc6a29fd1f:0xf99ad398de3efd34!5m2!4m1!1i2!8m2!3d48.8999723!4d23.3089486!16s%2Fg%2F11qqn3vghm?entry=ttu"
+                target="_blank" rel="noopener noreferrer nofollow">
+                м. Київ, пр-т Лесі Українки, 26
+              </a>
+            </li>
+            <li class="address-item">
+              <a class="address-contact address-hover" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="address-item">
+              <a class="address-contact address-hover" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+
+        </address>
+      </div>
+
+      <!-- fotter networks -->
+      <div class="fotter-social">
+        <h3 class="social-title">приєднуйтесь</h3>
+        <ul class="networks">
+          <li class="networks-item">
+            <a class="networks-link" href="https://www.instagram.com/" target="_blank"
+              rel="noopener noreferrer nofollow">
+              <svg class="networks-icon" width="20" height="20">
+                <use href="./svg/sprite.svg#instagram"></use>
+              </svg>
             </a>
           </li>
-          <li class="address-item">
-            <a class="address-contact address-hover" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <li class="networks-item">
+            <a class="networks-link" href="https://twitter.com/" target="_blank" rel="noopener noreferrer nofollow">
+              <svg class="networks-icon" width="20" height="20">
+                <use href="./svg/sprite.svg#twitter"></use>
+              </svg>
+            </a>
           </li>
-          <li class="address-item">
-            <a class="address-contact address-hover" href="tel:+380961111111">+38 096 111 11 11</a>
+          <li class="networks-item">
+            <a class="networks-link" href="https://www.facebook.com/" target="_blank"
+              rel="noopener noreferrer nofollow">
+              <svg class="networks-icon" width="20" height="20">
+                <use href="./svg/sprite.svg#facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="networks-item">
+            <a class="networks-link" href="https://www.linkedin.com/" target="_blank"
+              rel="noopener noreferrer nofollow">
+              <svg class="networks-icon" width="20" height="20">
+                <use href="./svg/sprite.svg#linkedin"></use>
+              </svg>
+            </a>
           </li>
         </ul>
+      </div>
 
-      </address>
     </div>
   </footer>
 
